# RBG-TEAM-PANEL

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build_deb.sh  fly.toml  playit_ac.bat  run_server.ps1  setup_playit.ps1
.github/workflows/: fly.yml
build_linux/: .ninja_deps  .ninja_log  CMakeCache.txt  LibDataChannelConfig.cmake  LibDataChannelConfigVersion.cmake  LibJuiceConfig.cmake  build.ninja  cmake_install.cmake  compile_commands.json  install_manifest.txt  management-client_amd64.deb  server
build_linux/libdatachannel/: cmake_install.cmake
build_linux/management-client_amd64/DEBIAN/: control
build_linux/management-client_amd64/usr/share/applications/: management-client.desktop
src/client/: App.cpp  App.h  Auth.cpp  Auth.h  Chat.cpp  Chat.h  Roles.cpp  Roles.h  Utils.cpp  Voice.cpp  Voice.h  avatar_data.h  logo_data.h  main.cpp  resources.rc
src/server/: Auth.cpp  Auth.h  Chat.cpp  Chat.h  DB.cpp  DB.h  Roles.cpp  Roles.h  Utils.cpp  Utils.h  Voice.cpp  Voice.h  main.cpp
